Final update before 1.13
Made a few changes to ArmorType.java before realizing I should do a final 1.12.2 commit.

--- a/plugin.yml
+++ b/plugin.yml
@@ -60,3 +60,8 @@ commands:
     usage: /getkey
     permission: rpm.default
     permission-message: You don't have the rpm.default permission.
+  role:
+    description: set a player's role
+    usage: /subclass <player> <role>
+    permission: rpm.admin
+    permission-message: You don't have the rpm.admin permission.
